Atualiza layout da landing page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-    <header class="hero-section">
+    <header id="#home" class="hero-section">
         <nav class="navbar">
             <div class="navbar-left">
-                <a href="#" class="logo">
+                <a class="logo">
                     <img src="/img/Logo_Menu.svg" alt="Logo da Sua Empresa">
                 </a>
             </div>
@@ -33,7 +33,7 @@
                     <li><a href="https://abrir.link/sHQDp" target="_blank" aria-label="YouTube">
                         <img src="/img/youtube.svg" onload="SVGInject(this)" /> 
                     </a></li>
-                    <li><a href="http://bit.ly/4kIGdSb" target="_blank" aria-label="Spotify">
+                    <li><a href="https://abrir.link/YTYqm" target="_blank" aria-label="Spotify">
                         <img src="/img/spotify.svg" onload="SVGInject(this)" /> 
                     </a></li>
                     <li><a href="" target="_blank" aria-label="TikTok">
@@ -71,14 +71,12 @@ Aqui é conteúdo real, sem enrolação.</p>
         </div>
     </section>
 
-<section id="apresentadores" class="presenters-section">
-
-    <div class="presenters-background"></div> 
-    
+<section id="apresentadores" class="presenters-section">   
     <div class="presenters-content">
         <h2 class="section-title">Apresentadores</h2>
         <div class="presenters-grid">
             <div class="presenter-card">
+                    <img src="/img/foto_ricardo.enc" alt="Foto de Leonardo" class="presenter-photo"> 
                 <h3 class="presenter-name">Leonardo</h3>
                 <p class="presenter-description">
                     Com mais de 10 anos de experiência em [área de atuação], o Apresentador 1 é especialista em [tópico principal]. 
@@ -86,6 +84,7 @@ Aqui é conteúdo real, sem enrolação.</p>
                 </p>
             </div>
             <div class="presenter-card">
+                  <img src="/img/foto_ricardo.enc" alt="Foto de Ricardo" class="presenter-photo"> 
                 <h3 class="presenter-name">Ricardo</h3>
                 <p class="presenter-description">
                     Apresentador 2 é referência em [outra área], trazendo uma perspectiva inovadora e conhecimento aprofundado. 
@@ -96,7 +95,7 @@ Aqui é conteúdo real, sem enrolação.</p>
     </div>
 </section>
 
-    <section id="episodios-anteriores" class="episodes-section">
+    <section id="episodios" class="episodes-section">
         <h2 class="section-title">Episódios Anteriores</h2>
         <div class="video-grid-principal">
             <div class="video-item-principal">
@@ -148,8 +147,8 @@ Aqui é conteúdo real, sem enrolação.</p>
         </div>
     </section>
 
-<section id="beneficios" class="benefits-section">
-       <div class="bg_newsletter"></div>
+<section id="newsletter" class="benefits-section">
+       <div class="bg_newsletter"></div> 
     <div class="benefits-content-wrapper">
         <h2 class="section-title">Newsletter</h2>
         <p class="benefits-intro-description">Episódios + Insights direto na sua caixa de entrada.</p>
@@ -183,7 +182,22 @@ Aqui é conteúdo real, sem enrolação.</p>
             </div>
         </div>
     </div>
-    
+</section>
+
+<!-- Nova Seção de Patrocinadores -->
+<section id="patrocinadores" class="sponsors-section">
+    <h2 class="section-title">Patrocinadores</h2>
+    <div class="sponsors-grid">
+        <div class="sponsor-item">
+            <img src="/img/logo_apex.png" alt="Logo Patrocinador 1" class="sponsor-logo">
+        </div>
+        <div class="sponsor-item">
+            <img src="/img/logo_exon.png" alt="Logo Patrocinador 2" class="sponsor-logo">
+        </div>
+        <div class="sponsor-item">
+            <img src="/img/logo_axxe.png" alt="Logo Patrocinador 3" class="sponsor-logo">
+        </div>
+    </div>
 </section>
 
         <footer class="main-footer">
