finalizando ladingpage imovelcwb

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                     Curitiba</span></h1>
             <p class="hero-subtitle">Para quem compra, vende ou vive de imóveis.<br> Aqui é conteúdo real, sem
                 enrolação.</p>
-            <a href="#chamada-para-acao" class="cta-button">Nosso episódio mais recente</a>
+            <a href="https://www.youtube.com/watch?v=eWmyR4GGIyg" class="cta-button">Nosso episódio mais recente</a>
         </div>
 
     </header>
 <section id="redes-sociais" class="social-media-section">
     <h2 class="section-title">Siga-nos em Nossos Canais</h2>
     <div class="social-icons-grid">
-        <a href="https://abrir.link/sHQDp" target="_blank" class="social-icon-item">
+        <a href="https://www.youtube.com/@imovelcwbpodcast" target="_blank" class="social-icon-item">
              <img src="/img/youtube.svg" alt="Ícone do YouTube" class="social-icon-img" onload="SVGInject(this)" />
             <span class="social-icon-text">YouTube</span>
         </a>
@@ -187,21 +187,21 @@
         </div>
         <div class="video-grid">
             <div id="video-1" class="video-item">
-                <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" title="YouTube video player 2" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" target="_blank" title="YouTube video player 2" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
                 <!-- <h3 class="video-title">Título do Episódio 1</h3> -->
             </div>
             <div id="video-2" class="video-item " >
-                <iframe src="https://www.youtube.com/embed/BM2TBj40ugc" title="YouTube video player 3" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/BM2TBj40ugc" target="_blank" title="YouTube video player 3" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
                 <!-- <h3 class="video-title">Título do Episódio 1</h3> -->
             </div>
             <div id="video-3" class="video-item">
-                <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" title="YouTube video player 4" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" target="_blank" title="YouTube video player 4" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
