Atualiza layout da landing page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="home" class="hero-section">
         <nav class="navbar">
             <div class="navbar-left">
-                <a href="#" class="logo">
+                <a href="#home" class="logo">
                     <img src="/img/Logo_Menu.svg" alt="Logo da Sua Empresa">
                 </a>
             </div>
@@ -68,23 +68,24 @@
         </div>
 
     </header>
-<section id="redes-sociais" class="social-media-section">
-    <h2 class="section-title">Siga-nos em Nossos Canais</h2>
-    <div class="social-icons-grid">
-        <a href="https://www.youtube.com/@imovelcwbpodcast" target="_blank" class="social-icon-item">
-             <img src="/img/youtube.svg" alt="Ícone do YouTube" class="social-icon-img" onload="SVGInject(this)" />
-            <span class="social-icon-text">YouTube</span>
-        </a>
-        <a href="https://abrir.link/YTYqm" target="_blank" class="social-icon-item">
-            <img src="/img/spotify.svg" alt="Ícone do Spotify" class="social-icon-img" onload="SVGInject(this)" />
-            <span class="social-icon-text">Spotify</span>
-        </a>
-        <a href="https://abrir.link/DHmXD" target="_blank" class="social-icon-item">
-           <img src="/img/instagram.svg" alt="Ícone do Instagram" class="social-icon-img" onload="SVGInject(this)" /> 
-            <span class="social-icon-text">Instagram</span>
-        </a>
-    </div>
-</section>
+    <section id="redes-sociais" class="social-media-section">
+        <h2 class="section-title">Siga-nos em Nossos Canais</h2>
+        <div class="social-icons-grid">
+            <a href="https://www.youtube.com/@imovelcwbpodcast" target="_blank" class="social-icon-item">
+                <img src="/img/youtube.svg" alt="Ícone do YouTube" class="social-icon-img" onload="SVGInject(this)" />
+                <span class="social-icon-text">YouTube</span>
+            </a>
+            <a href="https://abrir.link/YTYqm" target="_blank" class="social-icon-item">
+                <img src="/img/spotify.svg" alt="Ícone do Spotify" class="social-icon-img" onload="SVGInject(this)" />
+                <span class="social-icon-text">Spotify</span>
+            </a>
+            <a href="https://abrir.link/DHmXD" target="_blank" class="social-icon-item">
+                <img src="/img/instagram.svg" alt="Ícone do Instagram" class="social-icon-img"
+                    onload="SVGInject(this)" />
+                <span class="social-icon-text">Instagram</span>
+            </a>
+        </div>
+    </section>
 
 
     <section id="newsletter" class="benefits-section">
@@ -126,9 +127,9 @@
             </div>
         </div>
     </section>
- 
+
     <section id="sobre" class="about-section">
-        <img src="/img/Violate Elipse 5.svg" class="fundo-svg-1"  onload="SVGInject(this)" />
+        <img src="/img/Violate Elipse 5.svg" class="fundo-svg-1" onload="SVGInject(this)" />
         <div class="about-content-wrapper">
             <div class="about-title-container">
                 <h2 class="about-title">Quem<br> Somos</h2>
@@ -174,7 +175,7 @@
     </section>
 
     <section id="episodios" class="episodes-section">
-         <img class="fundo-svg-2"  src="/img/Violate Elipse 6.svg"  onload="SVGInject(this)" />
+        <img class="fundo-svg-2" src="/img/Violate Elipse 6.svg" onload="SVGInject(this)" />
         <h2 class="section-title">Episódios Anteriores</h2>
         <div class="video-grid-principal">
             <div class="video-item-principal">
@@ -187,21 +188,24 @@
         </div>
         <div class="video-grid">
             <div id="video-1" class="video-item">
-                <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" target="_blank" title="YouTube video player 2" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" target="_blank" title="YouTube video player 2"
+                    frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
                 <!-- <h3 class="video-title">Título do Episódio 1</h3> -->
             </div>
-            <div id="video-2" class="video-item " >
-                <iframe src="https://www.youtube.com/embed/BM2TBj40ugc" target="_blank" title="YouTube video player 3" frameborder="0"
+            <div id="video-2" class="video-item ">
+                <iframe src="https://www.youtube.com/embed/BM2TBj40ugc" target="_blank" title="YouTube video player 3"
+                    frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
                 <!-- <h3 class="video-title">Título do Episódio 1</h3> -->
             </div>
             <div id="video-3" class="video-item">
-                <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" target="_blank" title="YouTube video player 4" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" target="_blank" title="YouTube video player 4"
+                    frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
@@ -217,11 +221,11 @@
         <div class="sponsors-grid">
             <div class="sponsor-item">
                 <a href="https://abrir.link/tKREo">
-                <img src="/img/logo_apex.png" alt="Logo Patrocinador 1" class="sponsor-logo"></a>
+                    <img src="/img/logo_apex.png" alt="Logo Patrocinador 1" class="sponsor-logo"></a>
             </div>
             <div class="sponsor-item">
                 <a href="https://abrir.link/UiUsp">
-                <img src="/img/logo_exon.png" alt="Logo Patrocinador 2" class="sponsor-logo"></a>
+                    <img src="/img/logo_exon.png" alt="Logo Patrocinador 2" class="sponsor-logo"></a>
             </div>
             <div class="sponsor-item">
                 <a href=""></a>
@@ -229,6 +233,10 @@
             </div>
         </div>
     </section>
+
+    <a href="https://wa.me/SEU_NUMERO_DE_TELEFONE?text=Olá!" class="whatsapp-float" target="_blank">
+    <img src="/img/logos_whatsapp-icon.svg" alt="Logo do WhatsApp" class="whatsapp-icon">
+</a>
 
     <footer class="main-footer">
         <p>Todos os direitos reservados &copy; ImóvelCWB PODCAST</p>
