Atualiza projeto com novas alterações

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar">
             <div class="navbar-left">
                 <a href="#home" class="logo">
-                    <img src="/img/Logo_Menu.svg" alt="Logo da Sua Empresa">
+                    <img src="/img/logo-imovelcwb-icon.png" alt="Logo da Sua Empresa">
                 </a>
             </div>
 
@@ -47,7 +47,7 @@
                         <li><a href="https://abrir.link/YTYqm" target="_blank" aria-label="Spotify">
                                 <img src="/img/spotify.svg" onload="SVGInject(this)" />
                             </a></li>
-                        <li><a href="https://abrir.link/QjOZU" target="_blank" aria-label="Facebook">
+                        <li><a href="https://www.facebook.com/profile.php?id=61577085459389" target="_blank" aria-label="Facebook">
                                 <img src="/img/facebook.svg" onload="SVGInject(this)" />
                             </a></li>
                         <li><a href="https://abrir.link/DHmXD" target="_blank" aria-label="Instagram">
@@ -62,12 +62,33 @@
         <div class="hero-content">
             <h1 class="hero-title">O podcast que desvenda<br> o mercado <span class="gradient-text">imobiliário de
                     Curitiba</span></h1>
-            <p class="hero-subtitle">Para quem compra, vende ou vive de imóveis.<br> Aqui é conteúdo real, sem
+            <p class="hero-subtitle">Para quem compra, vende ou vive de imóveis. Aqui é conteúdo real, sem
                 enrolação.</p>
-            <a href="https://www.youtube.com/watch?v=eWmyR4GGIyg" class="cta-button">Nosso episódio mais recente</a>
+           <!-- <a href="https://www.youtube.com/watch?v=eWmyR4GGIyg" class="cta-button">Nosso episódio mais recente</a> -->
         </div>
 
     </header>
+
+    <!-- Nova Seção de Patrocinadores -->
+    <section id="patrocinadores" class="sponsors-section">
+        <h2 class="section-title">Patrocinadores</h2>
+        <div class="sponsors-grid">
+            <div class="sponsor-item">
+                <a href="https://abrir.link/tKREo">
+                    <img src="/img/lg_apex.png" alt="Logo Patrocinador 1" style="max-height: 60px;" class="sponsor-logo"></a>
+            </div>
+            <div class="sponsor-item">
+                <a href=""></a>
+                <img src="/img/lg_axxe.png" alt="Logo Patrocinador 2" style="max-height: 65px; margin-left: 10px;" class="sponsor-logo"></a>
+            </div>
+            <div class="sponsor-item">
+                <a href="https://abrir.link/UiUsp">
+                    <img src="/img/lg_exon.png" alt="Logo Patrocinador 3" style="max-height: 70px;" class="sponsor-logo"></a>
+            </div>
+        </div>
+    </section>
+
+
     <section id="redes-sociais" class="social-media-section">
         <h2 class="section-title">Siga-nos em Nossos Canais</h2>
         <div class="social-icons-grid">
@@ -80,8 +101,7 @@
                 <span class="social-icon-text">Spotify</span>
             </a>
             <a href="https://abrir.link/DHmXD" target="_blank" class="social-icon-item">
-                <img src="/img/instagram.svg" alt="Ícone do Instagram" class="social-icon-img"
-                    onload="SVGInject(this)" />
+                <img src="/img/instagram.svg" alt="Ícone do Instagram" class="social-icon-img" onload="SVGInject(this)" />
                 <span class="social-icon-text">Instagram</span>
             </a>
         </div>
@@ -156,9 +176,9 @@
                     <img src="/img/foto_ricardo.enc" alt="Foto de Leonardo" class="presenter-photo">
                     <h3 class="presenter-name">Leonardo</h3>
                     <p class="presenter-description">
-                        Com mais de 10 anos de experiência em [área de atuação], o Apresentador 1 é especialista em
-                        [tópico principal].
-                        Sua didática e carisma garantem uma experiência de aprendizado dinâmica e envolvente.
+                        Apresentador 1 é referência em [outra área], trazendo uma perspectiva inovadora e conhecimento
+                        aprofundado.
+                        Sua paixão por [tema] se reflete em suas apresentações cativantes e cheias de insights.
                     </p>
                 </div>
                 <div class="presenter-card">
@@ -176,24 +196,26 @@
 
     <section id="episodios" class="episodes-section">
         <img class="fundo-svg-2" src="/img/Violate Elipse 6.svg" onload="SVGInject(this)" />
-        <h2 class="section-title">Episódios Anteriores</h2>
+        <h2 class="section-title">Último Episódio</h2>
         <div class="video-grid-principal">
             <div class="video-item-principal">
-                <iframe src="https://www.youtube.com/embed/BM2TBj40ugc" title="YouTube video player 1" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/eWmyR4GGIyg" title="YouTube video player 1" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
                 <!-- <h3 class="video-title">Título do Episódio 1</h3> -->
             </div>
         </div>
-        <div class="video-grid">
+
+ <!-- 
+      <div class="video-grid">
             <div id="video-1" class="video-item">
                 <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" target="_blank" title="YouTube video player 2"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
-                <!-- <h3 class="video-title">Título do Episódio 1</h3> -->
+          
             </div>
             <div id="video-2" class="video-item ">
                 <iframe src="https://www.youtube.com/embed/BM2TBj40ugc" target="_blank" title="YouTube video player 3"
@@ -201,7 +223,7 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
-                <!-- <h3 class="video-title">Título do Episódio 1</h3> -->
+ 
             </div>
             <div id="video-3" class="video-item">
                 <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" target="_blank" title="YouTube video player 4"
@@ -210,28 +232,9 @@
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                 </iframe>
 
-                <!-- <h3 class="video-title">Título do Episódio 1</h3> -->
+ 
             </div>
-        </div>
-    </section>
-
-    <!-- Nova Seção de Patrocinadores -->
-    <section id="patrocinadores" class="sponsors-section">
-        <h2 class="section-title">Patrocinadores</h2>
-        <div class="sponsors-grid">
-            <div class="sponsor-item">
-                <a href="https://abrir.link/tKREo">
-                    <img src="/img/logo_apex.png" alt="Logo Patrocinador 1" class="sponsor-logo"></a>
-            </div>
-            <div class="sponsor-item">
-                <a href="https://abrir.link/UiUsp">
-                    <img src="/img/logo_exon.png" alt="Logo Patrocinador 2" class="sponsor-logo"></a>
-            </div>
-            <div class="sponsor-item">
-                <a href=""></a>
-                <img src="/img/logo_axxe.png" alt="Logo Patrocinador 3" class="sponsor-logo"></a>
-            </div>
-        </div>
+        </div>     -->
     </section>
 
     <a href="https://wa.me/SEU_NUMERO_DE_TELEFONE?text=Olá!" class="whatsapp-float" target="_blank">
