Atualiza layout quase no fim

--- a/index.html
+++ b/index.html
@@ -47,11 +47,15 @@
                         <li><a href="https://abrir.link/YTYqm" target="_blank" aria-label="Spotify">
                                 <img src="/img/spotify.svg" onload="SVGInject(this)" />
                             </a></li>
-                        <li><a href="https://www.facebook.com/profile.php?id=61577085459389" target="_blank" aria-label="Facebook">
+                        <li><a href="https://www.facebook.com/profile.php?id=61577085459389" target="_blank"
+                                aria-label="Facebook">
                                 <img src="/img/facebook.svg" onload="SVGInject(this)" />
                             </a></li>
                         <li><a href="https://abrir.link/DHmXD" target="_blank" aria-label="Instagram">
                                 <img src="/img/instagram.svg" onload="SVGInject(this)" />
+                            </a></li>
+                        <li><a href="https://shre.ink/xm2e" target="_blank" aria-label="Instagram">
+                                <img src="/img/linkedin.svg" onload="SVGInject(this)" />
                             </a></li>
                     </ul>
                 </div>
@@ -64,12 +68,12 @@
                     Curitiba</span></h1>
             <p class="hero-subtitle">Para quem compra, vende ou vive de imóveis. Aqui é conteúdo real, sem
                 enrolação.</p>
-           <!-- <a href="https://www.youtube.com/watch?v=eWmyR4GGIyg" class="cta-button">Nosso episódio mais recente</a> -->
+            <!-- <a href="https://www.youtube.com/watch?v=eWmyR4GGIyg" class="cta-button">Nosso episódio mais recente</a> -->
         </div>
 
     </header>
 
-        <section id="episodios" class="episodes-section">
+    <section id="episodios" class="episodes-section">
         <img class="fundo-svg-2" src="/img/Violate Elipse 6.svg" onload="SVGInject(this)" />
         <h2 class="section-title">Último Episódio</h2>
         <div class="video-grid-principal">
@@ -82,7 +86,9 @@
             </div>
         </div>
 
- <!-- 
+        <a href="https://www.youtube.com/watch?v=eWmyR4GGIyg" class="cta-button">Confira mais episódios</a>
+
+        <!-- 
       <div class="video-grid">
             <div id="video-1" class="video-item">
                 <iframe src="https://www.youtube.com/embed/i1qHS5CCDCM" target="_blank" title="YouTube video player 2"
@@ -113,7 +119,7 @@
     </section>
 
 
-    
+
     <section id="newsletter" class="benefits-section">
 
         <div class="benefits-content-wrapper">
@@ -122,7 +128,7 @@
             <div class="benefits-form-wrapper">
                 <input type="email" placeholder="Digite seu e-mail" class="email-input">
                 <button class="subscribe-button">
-                    QUERO RECEBER
+                    Quero receber
                     <img src="/img/seta_direita_svg.svg" alt="Seta para a direita" class="button-icon"
                         onload="SVGInject(this)" />
                 </button>
@@ -164,11 +170,11 @@
             </div>
             <div class="sponsor-item">
                 <a href=""></a>
-                <img src="/img/lg_axxe.png" alt="Logo Patrocinador 2"   class="sponsor-logo"></a>
+                <img src="/img/lg_axxe.png" alt="Logo Patrocinador 2" class="sponsor-logo"></a>
             </div>
             <div class="sponsor-item">
                 <a href="https://abrir.link/UiUsp">
-                    <img src="/img/lg_exon.png" alt="Logo Patrocinador 3"  class="sponsor-logo"></a>
+                    <img src="/img/lg_exon.png" alt="Logo Patrocinador 3" class="sponsor-logo"></a>
             </div>
         </div>
     </section>
@@ -186,12 +192,13 @@
                 <span class="social-icon-text">Spotify</span>
             </a>
             <a href="https://abrir.link/DHmXD" target="_blank" class="social-icon-item">
-                <img src="/img/instagram.svg" alt="Ícone do Instagram" class="social-icon-img" onload="SVGInject(this)" />
+                <img src="/img/instagram.svg" alt="Ícone do Instagram" class="social-icon-img"
+                    onload="SVGInject(this)" />
                 <span class="social-icon-text">Instagram</span>
             </a>
             <a href="https://shre.ink/xm2e" target="_blank" class="social-icon-item">
                 <img src="/img/linkedin.svg" alt="Ícone do Linkdin" class="social-icon-img" onload="SVGInject(this)" />
-                <span class="social-icon-text">Instagram</span>
+                <span class="social-icon-text">Linkedin</span>
             </a>
         </div>
     </section>
@@ -246,8 +253,8 @@
 
 
     <a href="https://wa.me/SEU_NUMERO_DE_TELEFONE?text=Olá!" class="whatsapp-float" target="_blank">
-    <img src="/img/logos_whatsapp-icon.svg" alt="Logo do WhatsApp" class="whatsapp-icon">
-</a>
+        <img src="/img/logos_whatsapp-icon.svg" alt="Logo do WhatsApp" class="whatsapp-icon">
+    </a>
 
     <footer class="main-footer">
         <p>Todos os direitos reservados &copy; ImóvelCWB PODCAST</p>
