Mensagem explicando o que foi atualizado

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
         </div>
 
-        <a href="https://www.youtube.com/watch?v=eWmyR4GGIyg" class="cta-button">Confira mais episódios</a>
+        <a href="https://www.youtube.com/@imovelcwbpodcast" class="cta-button">Confira mais episódios</a>
 
         <!-- 
       <div class="video-grid">
