Atualização de fotos e textos

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
         <div class="hero-content">
             <h1 class="hero-title">O podcast que desvenda<br> o mercado <span class="gradient-text">imobiliário de
                     Curitiba</span></h1>
-            <p class="hero-subtitle">Para quem compra, vende ou vive de imóveis. Aqui é conteúdo real, sem
-                enrolação.</p>
+            <p class="hero-subtitle">Conversas reais com especialistas e bastidores que fazem a diferença.
+                Para quem compra, vende ou vive o mundo imobiliário e quer fazer isso em alto nível. Aqui é conteúdo
+                real, direto ao ponto.</p>
             <!-- <a href="https://www.youtube.com/watch?v=eWmyR4GGIyg" class="cta-button">Nosso episódio mais recente</a> -->
         </div>
 
@@ -86,7 +87,8 @@
             </div>
         </div>
 
-        <a href="https://www.youtube.com/@imovelcwbpodcast" target="_blank" class="cta-button">Confira mais episódios</a>
+        <a href="https://www.youtube.com/@imovelcwbpodcast" target="_blank" class="cta-button">Confira mais
+            episódios</a>
 
         <!-- 
       <div class="video-grid">
@@ -137,24 +139,26 @@
                 <div class="benefit-item">
                     <img src="/img/icon_foguete.svg" alt="Ícone de Conteúdo Exclusivo" class="benefit-icon">
                     <h3 class="benefit-title">Dicas do mercado imobiliário</h3>
-                    <p class="benefit-description">Insights sobre bairros em valorização, tendências e oportunidades
-                        locais.</p>
+                    <p class="benefit-description">Análises sobre bairros que estão valorizando, mudanças no perfil dos
+                        compradores e tendências locais.</p>
                 </div>
                 <div class="benefit-item">
                     <img src="/img/icon_raio.svg" alt="Ícone de Notificações Prioritárias" class="benefit-icon">
                     <h3 class="benefit-title">Episódios novos em primeira mão</h3>
-                    <p class="benefit-description">Fique por dentro dos lançamentos antes de todo mundo.</p>
+                    <p class="benefit-description">Acesso antecipado a novos episódios + bastidores que só vão por
+                        e-mail.</p>
                 </div>
                 <div class="benefit-item">
                     <img src="/img/icon_especialistas.svg" alt="Ícone de Dicas e Ferramentas" class="benefit-icon">
-                    <h3 class="benefit-title">Entrevistas com especialistas</h3>
-                    <p class="benefit-description">Corretores, arquitetos, investidores e urbanistas comentando o
-                        mercado.</p>
+                    <h3 class="benefit-title">Bastidores com especialistas</h3>
+                    <p class="benefit-description">Conversas profundas com arquitetos, investidores e corretores que
+                        vivem o mercado por dentro.</p>
                 </div>
                 <div class="benefit-item">
                     <img src="/img/icon_lampada.svg" alt="Ícone de Comunidade" class="benefit-icon">
-                    <h3 class="benefit-title">Oportunidades de imóveis em destaque</h3>
-                    <p class="benefit-description">Imóveis com bom custo-benefício, lançamentos e avaliações.</p>
+                    <h3 class="benefit-title">Oportunidades fora do radar</h3>
+                    <p class="benefit-description">Imóveis com alto potencial, avaliações estratégicas e movimentos que
+                        você precisa acompanhar.</p>
                 </div>
             </div>
         </div>
@@ -166,7 +170,7 @@
         <div class="sponsors-grid">
             <div class="sponsor-item">
                 <a href="https://abrir.link/tKREo">
-                    <img src="/img/lg_apex.png" alt="Logo Patrocinador 1" class="sponsor-logo"></a>
+                    <img src="/img/lg_apex.png" alt="Logo Patrocinador 1" class="sponsor-logo" style="width: 205px;"></a>
             </div>
             <div class="sponsor-item">
                 <a href=""></a>
@@ -213,13 +217,10 @@
             </div>
             <div class="about-text-container">
                 <p class="about-text">
-                    Somos uma equipe apaixonada por criar soluções digitais inovadoras que transformam ideias em
-                    realidade.
-                    Com anos de experiência no mercado, nosso foco é entregar projetos de alta qualidade que superam as
-                    expectativas
-                    de nossos clientes. Acreditamos que a tecnologia, quando bem aplicada, pode impulsionar negócios e
-                    conectar pessoas.
-                    Nosso compromisso é com a excelência.
+                    O ImóvelCWB é um podcast feito por quem vive o mercado imobiliário de Curitiba por dentro.
+                    Aqui, a gente não fala sobre imóveis — a gente revela os bastidores de negociações reais,
+                    compartilha estratégias de quem atua todos os dias e antecipa os movimentos do mercado.
+                    Mais do que conteúdo: é visão de campo, traduzida em conversa direta e sem enrolação.
                 </p>
             </div>
         </div>
@@ -230,21 +231,21 @@
             <h2 class="section-title">Apresentadores</h2>
             <div class="presenters-grid">
                 <div class="presenter-card">
-                    <img src="/img/foto_ricardo.enc" alt="Foto de Leonardo" class="presenter-photo">
-                    <h3 class="presenter-name">Leonardo</h3>
+                    <img src="/img/foto-ricardo.png" alt="Foto de Ricardo" class="presenter-photo">
+                    <h3 class="presenter-name">Ricardo Maciel</h3>
                     <p class="presenter-description">
-                        Apresentador 1 é referência em [outra área], trazendo uma perspectiva inovadora e conhecimento
-                        aprofundado.
-                        Sua paixão por [tema] se reflete em suas apresentações cativantes e cheias de insights.
+                        Especialista em estratégia imobiliária, fundador da Exon Imóveis e criador do ImóvelCWB. Com mais de 1.000 negociações acompanhadas, 
+                        atua como mentor consultivo para compradores, vendedores e corretores.
+                        “A gente só acerta no mercado quando entende o jogo de dentro pra fora.”
                     </p>
                 </div>
                 <div class="presenter-card">
-                    <img src="/img/foto_ricardo.enc" alt="Foto de Ricardo" class="presenter-photo">
-                    <h3 class="presenter-name">Ricardo</h3>
+                    <img src="/img/foto-leonardo.png" alt="Foto de Leonardo" class="presenter-photo">
+                    <h3 class="presenter-name">Leonardo Fagundes</h3>
                     <p class="presenter-description">
-                        Apresentador 2 é referência em [outra área], trazendo uma perspectiva inovadora e conhecimento
-                        aprofundado.
-                        Sua paixão por [tema] se reflete em suas apresentações cativantes e cheias de insights.
+                        Sócio da APEX Comunicação — agência patrocinadora do ImóvelCWB — e um dos idealizadores do podcast. Especialista em produção audiovisual e storytelling estratégico,
+                        Leonardo traz o olhar criativo e técnico que transforma cada episódio em uma experiência envolvente.
+                        “Toda boa conversa começa com uma dúvida verdadeira — e termina com um insight que faz pensar.
                     </p>
                 </div>
             </div>
