Atualização de fotos e textos

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="sponsors-grid">
             <div class="sponsor-item">
                 <a href="https://abrir.link/tKREo">
-                    <img src="/img/lg_apex.png" alt="Logo Patrocinador 1" class="sponsor-logo" style="width: 205px;"></a>
+                    <img src="/img/lg_apex.png" alt="Logo Patrocinador 1" class="sponsor-logo apex"></a>
             </div>
             <div class="sponsor-item">
                 <a href=""></a>
