Atualiza layout com melhorias visuais

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
     </header>
 
     <section id="episodios" class="episodes-section">
-        <img class="fundo-svg-2" src="/img/Violate Elipse 6.svg" onload="SVGInject(this)" />
         <h2 class="section-title">Último Episódio</h2>
         <div class="video-grid-principal">
             <div class="video-item-principal">
@@ -207,10 +206,10 @@
         </div>
     </section>
 
-
+      <img src="/img/Violate Elipse 5.svg" class="fundo-svg-1" onload="SVGInject(this)" />
 
     <section id="sobre" class="about-section">
-        <img src="/img/Violate Elipse 5.svg" class="fundo-svg-1" onload="SVGInject(this)" />
+        
         <div class="about-content-wrapper">
             <div class="about-title-container">
                 <h2 class="about-title">Quem<br> Somos</h2>
@@ -218,14 +217,14 @@
             <div class="about-text-container">
                 <p class="about-text">
                     O ImóvelCWB é um podcast feito por quem vive o mercado imobiliário de Curitiba por dentro.
-                    Aqui, a gente não fala sobre imóveis — a gente revela os bastidores de negociações reais,
+                    Aqui, a gente não fala sobre imóveis a gente revela os bastidores de negociações reais,
                     compartilha estratégias de quem atua todos os dias e antecipa os movimentos do mercado.
                     Mais do que conteúdo: é visão de campo, traduzida em conversa direta e sem enrolação.
                 </p>
             </div>
         </div>
     </section>
-
+            <img class="fundo-svg-2" src="/img/Violate Elipse 6.svg" onload="SVGInject(this)" />
     <section id="apresentadores" class="presenters-section">
         <div class="presenters-content">
             <h2 class="section-title">Apresentadores</h2>
@@ -243,9 +242,9 @@
                     <img src="/img/foto-leonardo.png" alt="Foto de Leonardo" class="presenter-photo">
                     <h3 class="presenter-name">Leonardo Fagundes</h3>
                     <p class="presenter-description">
-                        Sócio da APEX Comunicação — agência patrocinadora do ImóvelCWB — e um dos idealizadores do podcast. Especialista em produção audiovisual e storytelling estratégico,
+                        Sócio da APEX Comunicação agência patrocinadora do ImóvelCWB e um dos idealizadores do podcast. Especialista em produção audiovisual e storytelling estratégico,
                         Leonardo traz o olhar criativo e técnico que transforma cada episódio em uma experiência envolvente.
-                        “Toda boa conversa começa com uma dúvida verdadeira — e termina com um insight que faz pensar.
+                        “Toda boa conversa começa com uma dúvida verdadeira e termina com um insight que faz pensar.”
                     </p>
                 </div>
             </div>
